--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,18 @@
 * {
     box-sizing: border-box;
+    max-width: 1100px;
     padding: 0;
-    margin: 0;
+    margin: auto;
 }
 
 body {
     background-color: #d9dcd6;
+    position: relative;
 }
 
 .header {
+    position:fixed;
+    width: 100%;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -84,21 +88,20 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
 .benefit-lead {
     margin-bottom: 32px;
-    color: #ffffff;
 }
 
 .benefit-brand {
     margin-bottom: 32px;
-    color: #ffffff;
 }
 
 .benefit-cost {
     margin-bottom: 32px;
-    color: #ffffff;
 }
 
 .benefit-lead h3 {
