--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ body {
     position: relative;
 }
 
+h3 {
+    margin-top: 10px;
+    text-align: center;
+}
+
 .header {
     position:fixed;
     width: 100%;
@@ -59,6 +64,12 @@ body {
     background-position: center;
 }
 
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,11 +80,7 @@ body {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
+
 
 .benefits {
     margin-right: 20px;
@@ -87,20 +94,9 @@ body {
     color: #ffffff;
 }
 
-h3 {
-    margin-top: 10px;
-    text-align: center;
-}
 
-.benefits :is(.benefit-lead img, .benefit-cost img, .benefit-cost img){
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-/* i dont know why i couldnt remove the below class and have it follow the above rule*/
-
-.benefit-brand img {
+.benefits :is(.benefit-lead img, .benefit-brand img, .benefit-cost img){
     display: block;
     margin: 10px auto;
     max-width: 150px;
