--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,10 @@
     margin: auto;
 }
 
+/* I tried my best to simplify my css and remove excess classes and ids and elements*/
+
 p {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 body {
@@ -28,12 +30,12 @@ h3 {
     color: #ffffff;
 }
 
-.header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header .seo {
+.seo {
     color: #d9dcd6;
 }
 
